--- a/routine-app/src/styles/base/_settings.scss
+++ b/routine-app/src/styles/base/_settings.scss
@@ -1,5 +1,6 @@
 //colors
 $off-white: #f8f8f8;
+$off-black: #080808;
 $green: #57b846;
 $blue: #1da1f2;
 
@@ -12,6 +13,12 @@ $lg: 3rem;
 $xlg: 5rem;
 $xxlg: 7rem;
 
+$quicksand: 'Quicksand', sans-serif;
+// Breakpoints
+$lg-breakpoint: 1024px;
+$md-breakpoint: 768px;
+$sm-breakpoint: 641px;
+$xs-breakpoint: 480px;
 
 $button-radius: 30px;
 
