--- a/routine-app/src/styles/styles.scss
+++ b/routine-app/src/styles/styles.scss
@@ -3,3 +3,4 @@
 @import './components/home';
 @import './components/quiz_instructions';
 @import './components/play';
+@import './components/quiz_summary';
