--- a/routine-app/src/styles/base/_base.scss
+++ b/routine-app/src/styles/base/_base.scss
@@ -2,3 +2,10 @@
     padding: 0;
     margin: 0;
 }
+
+.disable {
+    background-color: #ccc !important;
+    box-shadow: none !important;
+    opacity: 0.9 !important;
+    pointer-events: none;
+}
